# iconflow

./: .gitattributes  .gitignore  ASSETS_MANIFEST.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_LICENSES_CRATES.html  THIRD_PARTY_LICENSES_FONTS.md  about.hbs  about.toml
.github/workflows/: ci.yml
assets/maps/: bootstrap.json  carbon.json  devicon.json  feather.json  fluentui.json  heroicons.json  iconoir.json  ionicons.json  lobe.json  lucide.json  octicons.json  phosphor.json  remixicon.json  tabler.json
assets/schema/: iconflow-pack.schema.json
docs/: faq.md  plan.md  quickstart.md  spec.md
examples/: egui_demo.rs  iced_demo.rs
examples/egui_demo/: README.md  main.rs
examples/iced_demo/: README.md  main.rs
examples/v1.0/egui_demo/: README.md
examples/v1.0/iced_demo/: README.md  main.rs
scripts/: README.md  check_fonts.py  convert_svg_to_ttf.py  expand_strokes_with_inkscape.py  gen_fontforge_preview_html.py  map_gen.py  move_16_icons.py  patch_names.py  remove_color_icons.py  split_filled_bootstrap_icons.py  split_icons_by_style.py  svg_pack_to_ttf_fontforge.py  svg_to_rust.py  validate_assets.py  verify_integrity.py  woff_to_ttf.py
src/: lib.rs
src/core/: api.rs  error.rs  mod.rs  types.rs
src/packs/: bootstrap.rs  carbon.rs  devicon.rs  feather.rs  fluentui.rs  heroicons.rs  iconoir.rs  ionicons.rs  lobe.rs  lucide.rs  mod.rs  octicons.rs  phosphor.rs  remixicon.rs  tabler.rs
xtask/: Cargo.toml
xtask/src/: main.rs
