[package]
name = "iconflow"
version = "1.0.0"
edition = "2024"
rust-version = "1.92"
description = "A unified icon library for Rust GUI applications supporting multiple icon packs"
license = "MIT"
repository = "https://github.com/FerrisMind/iconflow"
authors = ["FerrisMind"]
readme = "README.md"
keywords = ["icons", "gui", "egui", "iced", "fonts"]
categories = ["gui", "graphics", "rendering"]
homepage = "https://github.com/FerrisMind/iconflow"
documentation = "https://docs.rs/iconflow"

include = [
    "/src/**/*",
    "/assets/fonts/**/*.ttf",
    "/assets/maps/*.json",
    "/assets/schema/*.json",
    "/assets/icons/*.png",
    "/assets/icons/*.svg",
    "/ASSETS_MANIFEST.json",
    "/LICENSE",
    "/README.md",
    "/Cargo.toml",
    "/rust-toolchain.toml",
    "/THIRD_PARTY_LICENSES_FONTS.md",
]

[dependencies]

[dev-dependencies]
eframe = "0.33"
iced = { version = "0.14", features = ["advanced"] }

[features]
default = []
pack-bootstrap = []
pack-carbon = []
pack-devicon = []
pack-feather = []
pack-fluentui = []
pack-heroicons = []
pack-iconoir = []
pack-ionicons = []
pack-lobe = []
pack-lucide = []
pack-octicons = []
pack-phosphor = []
pack-remixicon = []
pack-tabler = []
heroicons-tiny = ["pack-heroicons"]
heroicons-mini = ["pack-heroicons"]
heroicons-regular = ["pack-heroicons"]
octicons-tiny = ["pack-octicons"]
octicons-regular = ["pack-octicons"]
all-packs = [
  "pack-bootstrap",
  "pack-carbon",
  "pack-devicon",
  "pack-feather",
  "pack-fluentui",
  "pack-heroicons",
  "pack-iconoir",
  "pack-ionicons",
  "pack-lobe",
  "pack-lucide",
  "pack-octicons",
  "pack-phosphor",
  "pack-remixicon",
  "pack-tabler",
  "heroicons-tiny",
  "heroicons-mini",
  "heroicons-regular",
  "octicons-tiny",
  "octicons-regular",
]

[workspace]
members = ["xtask"]
resolver = "3"

[[example]]
name = "egui_demo"
path = "examples/egui_demo/main.rs"
required-features = ["all-packs"]

[[example]]
name = "iced_demo"
path = "examples/iced_demo/main.rs"
required-features = ["all-packs"]
